  - Add admin_merge_request ability to Developer level and up
  - Fix Error 500 when browsing projects with no HEAD (Stan Hu)
  - Fix labels / assignee / milestone for the merge requests when issues are disabled
  - Show the first tab automatically on MergeRequests#new
  - Add rake task 'gitlab:update_commit_count' (Daniel Gerhardt)
  - Fix Gmail Actions

v 7.13.1
  - Fix: Label modifications are not reflected in existing notes and in the issue list
  - Fix: Label not shown in the Issue list, although it's set through web interface
  - Fix: Group/project references are linked incorrectly
  - Improve documentation
  - Fix of migration: Check if session_expire_delay column exists before adding the column
  - Fix: ActionView::Template::Error
  - Fix: "Create Merge Request" isn't always shown in event for newly pushed branch
  - Fix bug causing "Remove source-branch" option not to work for merge requests from the same project.
  - Render Note field hints consistently for "new" and "edit" forms

v 7.13.0
  - Remove repository graph log to fix slow cache updates after push event (Stan Hu)
  - Only enable HSTS header for HTTPS and port 443 (Stan Hu)
  - Fix user autocomplete for unauthenticated users accessing public projects (Stan Hu)
  - Fix redirection to home page URL for unauthorized users (Daniel Gerhardt)
  - Add branch switching support for graphs (Daniel Gerhardt)
  - Fix external issue tracker hook/test for HTTPS URLs (Daniel Gerhardt)
  - Remove link leading to a 404 error in Deploy Keys page (Stan Hu)
  - Add support for unlocking users in admin settings (Stan Hu)
  - Add Irker service configuration options (Stan Hu)
  - Fix order of issues imported from GitHub (Hiroyuki Sato)
  - Bump rugments to 1.0.0beta8 to fix C prototype function highlighting (Jonathon Reinhart)
  - Fix Merge Request webhook to properly fire "merge" action when accepted from the web UI
  - Add `two_factor_enabled` field to admin user API (Stan Hu)